[package]
name = "arkimedb-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkimedb-core.workspace = true
arkimedb-storage.workspace = true
arkimedb-query.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tracing.workspace = true
bytes.workspace = true
time.workspace = true
parking_lot.workspace = true
ahash.workspace = true
