[package]
name = "arkimedb-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkimedb-core.workspace = true
arkimedb-storage.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
tracing.workspace = true
ahash.workspace = true
roaring.workspace = true
fst.workspace = true
regex-automata.workspace = true
time.workspace = true
